# opencv5

./: .gitignore  Dockerfile.frontend  Dockerfile.worker  README.md  docker-compose.yml  requirements.frontend.txt  requirements.worker.txt  start_worker.sh  test_lesson7.py
config/: lessons.yaml
data/: generate_conveyor_parts.py  generate_lesson7_samples.py  generate_live_feed.py  generate_ply.py  generate_samples.py
data/input/: generate_lesson9_data.py  lesson8_sample.ply
frontend/: app.py
src_cpp/: CMakeLists.txt  lesson1.cpp
src_cpp/2d_track/: lesson1.cpp  lesson2_filters.cpp  lesson3_edges.cpp  lesson4_contours.cpp  lesson5_features.cpp  lesson6_calibration.cpp  module.cpp
src_cpp/3d_track/: lesson7_depth.cpp  lesson8_normals.cpp  module.cpp
src_cpp/integration/: lesson9_sensor_fusion.cpp  module.cpp
temporal_worker/: activities.py  main.py  test_lesson9.py  workflows.py
temporal_worker/workflows/integration/: lesson9.py
temporal_worker/workflows/track_2d/: activities.py  lesson5.py  lesson6.py  workflows.py
temporal_worker/workflows/track_3d/: lesson7.py  lesson8.py
